--- a/META.yml
+++ b/META.yml
@@ -3,24 +3,30 @@ abstract: 'Manipulate environment PATH strings'
 author:
   - 'Adam Kennedy <adamk@cpan.org>'
 build_requires:
+  ExtUtils::MakeMaker: 6.42
   Test::More: 0.47
   Test::Script: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.71'
+generated_by: 'Module::Install version 0.85'
 license: perl
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+module_name: Win32::Env::Path
 name: Win32-Env-Path
 no_index:
   directory:
     - inc
     - t
 requires:
-  Carp: 0
   File::Spec: 0.80
   Params::Util: 0.10
   Win32::TieRegistry: 0.03
   perl: 5.8.0
-  warnings: 0
-version: 0.01
+resources:
+  ChangeLog: http://fisheye2.atlassian.com/changelog/cpan/trunk/Win32-Env-Path
+  license: http://dev.perl.org/licenses/
+  repository: http://svn.ali.as/cpan/trunk/Win32-Env-Path
+version: 0.02
